# zipalign-standalone

./: .gitignore  .gitmodules  Dockerfile
cmake/: CMakeLists.txt  libbase.cmake  liblog-shim.cmake  liblog.cmake  libsystem.cmake  libutils.cmake  libziparchive.cmake  zlib.cmake  zopfli.cmake
include/liblog-shim/android/: log.h
include/liblog-shim/log/: log.h
scripts/: build-tool.sh  copy-sources.sh  generate-makefiles.sh
